almost done project

--- a/project1/first assignament.html
+++ b/project1/first assignament.html
@@ -35,9 +35,9 @@
                         <option value="nepal">nepal</option>
                         <fieldset>
                             <legend>Gender</legend>
-                            <input type="radio" id="male" name="gender">
+                            <input type="radio" id="male" name="gender" value="male">
                             <label for="Male">Male</label>
-                            <input type="radio" id="female" name="gender">
+                            <input type="radio" id="female" name="gender" value="female">
                             <label for="Female">Female</label>
                         </fieldset>
                 </fieldset>
