project bug fixes

--- a/project1/first assignament.html
+++ b/project1/first assignament.html
@@ -33,15 +33,13 @@
                         <option value="india">India</option>
                         <option value="china">china</option>
                         <option value="nepal">nepal</option>
-                        <fieldset>
-                            <legend>Gender</legend>
-                            <input type="radio" id="male" name="gender" value="male">
-                            <label for="Male">Male</label>
-                            <input type="radio" id="female" name="gender" value="female">
-                            <label for="Female">Female</label>
-                        </fieldset>
+                    </select>
+                    <label for="Gender">Gender</label><br>
+                    <input type="radio" id="male" name="gender" value="Male">
+                    <label for="male">Male</label>
+                    <input type="radio" id="female" name="gender" value="Female">
+                    <label for="female">Female</label>
                 </fieldset>
-                <br>
                 <fieldset>
                     <legend><b>Additional information</b></legend>
                     <label for="Bio">Bio</label>
@@ -49,12 +47,12 @@
                 </textarea>
                     Choose your intereste<br>
                     <ul>
-                        <li><input type="checkbox" id="interest1" name="intreset" value="technolgy">
-                            <label for="interset">technolgy</label>
-                        <li><input type="checkbox" id="interest2" name="intreset" value="sports">
-                            <label for="interset">sports</label>
-                        <li><input type="checkbox" id="interest3" name="intreset" value="music">
-                            <label for="interset">music</label>
+                        <li><input type="checkbox" id="interest" name="intreset" value="technolgy"></li>
+                        <label for="interset">technolgy</label>
+                        <li><input type="checkbox" id="interest" name="intreset" value="sports"></li>
+                        <label for="interset">sports</label>
+                        <li><input type="checkbox" id="interest" name="intreset" value="music"></li>
+                        <label for="interset">music</label>
                     </ul>
                 </fieldset>
                 <input type="submit" value="Submit">
@@ -63,9 +61,9 @@
             <h2>HTML Elements Ddemonstation</h2>
             <b>Definition List</b>
             <dl>
-                <DT> HTML</DT>
-                <DD> HyperText Markup Language</DD>
-                <Dt>CSS</Dt>
+                <dt> HTML</dt>
+                <dd> HyperText Markup Language</dd>
+                <dt>CSS</dt>
                 <dd>Cascading Style Sheet</dd>
                 <dt>JS</dt>
                 <dd>JavaScript</dd>
@@ -129,10 +127,10 @@
             </table>
             <br>
             <footer>
-                <p >@ 2024 your name. All right receved</p>
+                <p>@ 2024 your name. All right receved</p>
         </section>
+        </footer>
     </main>
-    </footer>
 </body>
 
 </html>
