--- a/project1/first assignament.html
+++ b/project1/first assignament.html
@@ -48,9 +48,9 @@
                     Choose your intereste<br>
                     <ul>
                         <li><input type="checkbox" id="interest" name="intreset" value="technolgy"></li>
-                        <label for="interset">technolgy</label>
+                        <label for="interset">technolgy</label><br>
                         <li><input type="checkbox" id="interest" name="intreset" value="sports"></li>
-                        <label for="interset">sports</label>
+                        <label for="interset">sports</label><br>
                         <li><input type="checkbox" id="interest" name="intreset" value="music"></li>
                         <label for="interset">music</label>
                     </ul>
