--- a/project1/project 4/new website.html
+++ b/project1/project 4/new website.html
@@ -32,7 +32,8 @@
             gap: 2em;
             padding-left: 40vw;
         }
-        .list ul li a{
+
+        .list ul li a {
             text-decoration: none;
             color: #080808;
         }
@@ -73,7 +74,7 @@
 
         nav button a {
             padding: 10px;
-            color:white;
+            color: white;
             text-decoration: none;
         }
 
@@ -81,46 +82,125 @@
             border-radius: 10px;
             background-color: #7a09fc;
         }
-        .course ul li a{
+
+        .course ul li a {
             text-decoration: none;
-            color:#7a09fc;
+            color: #7a09fc;
             font-size: 14px;
             font-weight: bold;
         }
-        .container{
-            width:100vw;
-            height:100vh;
+
+        .container {
+            width: 100vw;
+            height: auto;
             background-color: #c4c7c0;
             display: flex;
         }
-        .container aside{
-            width:20vw;
-            height:auto;
-            background-color: #fff;
+
+        .container aside {
+            width: 20vw;
+            height: auto;
+            background-color: #fdfbfd;
         }
-        aside h2{
-           padding-left:15px;
-           font-size: 16px;
+
+        aside h2 {
+            padding-left: 15px;
+            font-size: 16px;
         }
-        aside ul{
+
+        aside ul {
             margin-left: 50px;
-            list-style:circle
+            list-style: circle
         }
-        aside ul li a{
+
+        aside ul li a {
             text-decoration: none;
-            color:#5e269e;
+            color: #5e269e;
             font-weight: bold;
             font-size: 14px;
         }
-        .container main{
-            width:80vw;
-            height:auto;
-             background-color: #dadfd5;
+
+        .container main {
+            width: 79vw;
+            height: auto;
+            background-color: #c6c9c2;
         }
-        .top{
+
+        .top {
             text-align: center;
             font-size: 10px;
-            border-bottom:1px solid rgb(206, 202, 202);
+            border-bottom: 1px solid rgb(206, 202, 202);
+        }
+
+        .pre-btn {
+            display: flex;
+            justify-content: space-between;
+            padding: 5px;
+        }
+
+        .pre-btn a {
+            padding: 10px;
+            text-decoration: none;
+        }
+
+        .flex {
+            margin: 10px;
+        }
+
+        .flex h2 {
+            padding-bottom: 8px
+        }
+
+        .flex dt {
+            padding-bottom: 5px;
+            font-weight: bold;
+        }
+
+        .flex-start {
+            border: 2px solid black;
+            padding: 5px;
+            margin: 5px;
+        }
+
+        .f-start {
+            display: flex;
+            justify-content: flex-start;
+            gap: 2rem;
+        }
+
+        .center {
+            border: 2px solid black;
+            padding: 5px;
+            margin: 5px;
+        }
+
+        .j-center {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+        }
+
+        .flex-end {
+            border: 2px solid black;
+            padding: 5px;
+            margin: 5px;
+        }
+
+        .f-end {
+            display: flex;
+            justify-content: flex-end;
+            gap: 2rem;
+        }
+
+        .space-between {
+            border: 2px solid black;
+            padding: 5px;
+            margin: 5px;
+        }
+
+        .s-between {
+            display: flex;
+            justify-content: space-between;
         }
     </style>
 </head>
@@ -177,9 +257,10 @@
                 <li><a href="#">HTML Elements</a></li>
                 <li><a href="#">HTML Attributes</a></li>
                 <li><a href="#">HTML comments</a></li>
-                <li><a href="#">HTML Id & Classes</a></li></ul>
-                <h2>HTML BASIC TAGES</h2>
-                <ul>
+                <li><a href="#">HTML Id & Classes</a></li>
+            </ul>
+            <h2>HTML BASIC TAGES</h2>
+            <ul>
                 <li><a href="#">Skeletal Tags </a></li>
                 <li><a href="#">Heading Tags </a></li>
                 <li><a href="#">Paragraph Tag </a></li>
@@ -187,18 +268,66 @@
                 <li><a href="#">Line Break Tag </a></li>
                 <li><a href="#">Anchor Tag </a></li>
                 <li><a href="#">Image Tag</a></li>
-                <li><a href="#">Per Tag </a></li></ul>
-                <h2>INLINE & BLOCK ELEMENTS</h2>
-                <ul>
+                <li><a href="#">Per Tag </a></li>
+            </ul>
+            <h2>INLINE & BLOCK ELEMENTS</h2>
+            <ul>
                 <li><a href="#">HTML Inline Elements</a></li>
-                <li><a href="#">HTML Block Elements</a></li>       
+                <li><a href="#">HTML Block Elements</a></li>
             </ul>
         </aside>
         <main>
-            <div class="top"> This site uses Google AdSense ad intent links. AdSense automatically generates these links and they may help creators earn money.
+            <div class="top"> This site uses Google AdSense ad intent links. AdSense automatically generates these links
+                and they may help creators earn money.
             </div>
-            <button><a href="#">Previous</a></button>
-            <button><a href="#">next</a></button>
+            <div class="pre-btn">
+                <button><a href="#">Previous></a></button>
+                <button><a href="#"> Next</a></button>
+            </div>
+            <div class="flex">
+                <h2>Flexbox</h2>
+                <dl>
+                    <dt>What is CSS Flexbox?</dt>
+                    <dd>Flexbox is short for the Flexible Box Layout module.<br>
+                        Flexbox is a layout method for arranging items in rows or columns.<br>
+                        Flexbox makes it easier to design a flexible responsive layout structure, without using float or
+                        positioning.
+                    </dd>
+                </dl>
+                <h2>justify-content</h2>
+                <div class="flex-start">
+                    <h3>flex start</h3>
+                    <div class="f-start">
+                        <img src="147.jpg" alt="nature">
+                        <img src="258.jpg" alt="nature">
+                        <img src="369.jpg" alt="nature">
+                    </div>
+                </div>
+                <div class="center">
+                    <h3>justify content center</h3>
+                    <div class=j-center>
+                        <img src="147.jpg" alt="">
+                        <img src="258.jpg" alt="">
+                        <img src="369.jpg" alt="">
+                    </div>
+                </div>
+                <div class="flex-end">
+                    <h3>justify-content flex-end</h3>
+                    <div class="f-end">
+                        <img src="147.jpg" alt="">
+                        <img src="258.jpg" alt="">
+                        <img src="369.jpg" alt="">
+                    </div>
+                </div>
+                <div class="space-between">
+                    <h3>space-between</h3>
+                    <div class="s-between">
+                        <img src="147.jpg" alt="">
+                        <img src="258.jpg" alt="">
+                        <img src="369.jpg" alt="">
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 
