--- a/project1/project 6/assignament grid.html
+++ b/project1/project 6/assignament grid.html
@@ -28,21 +28,56 @@
         </div>
     </header>
     <div class="grid">
-        <!-- <div class="itmes"> -->
+        <div class="grid1">
             <div class="box box1"><h2>Discover Amazing places</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam beatae vel eveniet totam minus at!</p>
-        <button class="brid-btn">Learn More</button></div>
-            <div class="box box2">2</div>
-            <div class="box box3">3</div>
-            <div class="box box4">4</div>
-            <div class="box box5">5</div>
-            <!-- <div class="box box6">6</div>
-            <div class="box box7">7</div>
-            <div class="box box8">8</div>
-            <div class="box box9">9</div>
-            <div class="box box10">10</div> -->
-        <!-- </div> -->
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam beatae vel eveniet totam minus at!</p>
+            <div class="btn1"> <button class="brid-btn">Learn More</button>  </div>
+        </div>
+        </div>
+        <div class="grid2">
+            <div class="box box2">Image 1</div>
+            <div class="box box2">Image 2</div>
+            <div class="box box2">Image 3</div>
+            <div class="box box2">Image 4</div>
+        </div>
     </div>
+      <div class="grida">
+        <div class="ram ram1">1</div>
+        <div class="ram ram2">2</div>
+        <div class="ram ram3">3</div>
+      </div>
+      <div class="gridb">
+        <div class="ramg ram11">1</div>
+        <div class="ramg ram22">2</div>
+        <div class="ramg ram33">3</div>
+      </div>
+      <footer>
+        <table>
+            <tr>
+                <th>About</th>
+                <th>Quick Link</th>
+                <th>Contect</th>
+                <th>Follow Us</th>
+            </tr>
+            <tr>
+                <td rowspan="3">Your trusted travel componion</td>
+                <td><a href="#">Tour</a></td>
+                <td rowspan="2">Email:<br>info@travelgrid.com
+                </td>
+                <td><a href="#">Facebook</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">hotel</a></td>
+                <td ><a href="#">Twitter</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">Flights</a></td>
+                <td>Phone <br>(5555)2583 3697</td>
+                <td><a href="#">Instagram</a></td>
+            </tr>
+
+        </table>
+      </footer>
 </body>
 
 </html>
