--- a/project1/project 6/assignament grid.html
+++ b/project1/project 6/assignament grid.html
@@ -9,75 +9,120 @@
 </head>
 
 <body>
-    <header>
-        <div class="nav-bar">
-            <h2>TravelGrid</h2>
-            <div class="nav-list">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Destination</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contect</a></li>
-                </ul>
+    <section>
+        <header>
+            <div class="nav-bar">
+                <h2>TravelGrid</h2>
+                <div class="nav-list">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Destination</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contect</a></li>
+                    </ul>
+                </div>
+                <span>
+                    <label for="search">
+                        <input type="text" placeholder="Search..."></label>
+                    <button class="search-btn">Search</button>
+                </span>
             </div>
-            <span>
-                <label for="search">
-                    <input type="text" placeholder="Search..."></label>
-                <button class="search-btn">Search</button>
-            </span>
-        </div>
-    </header>
-    <div class="grid">
-        <div class="grid1">
-            <div class="box box1"><h2>Discover Amazing places</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam beatae vel eveniet totam minus at!</p>
-            <div class="btn1"> <button class="brid-btn">Learn More</button>  </div>
-        </div>
-        </div>
-        <div class="grid2">
-            <div class="box box2">Image 1</div>
-            <div class="box box2">Image 2</div>
-            <div class="box box2">Image 3</div>
-            <div class="box box2">Image 4</div>
-        </div>
-    </div>
-      <div class="grida">
-        <div class="ram ram1">1</div>
-        <div class="ram ram2">2</div>
-        <div class="ram ram3">3</div>
-      </div>
-      <div class="gridb">
-        <div class="ramg ram11">1</div>
-        <div class="ramg ram22">2</div>
-        <div class="ramg ram33">3</div>
-      </div>
-      <footer>
-        <table>
-            <tr>
-                <th>About</th>
-                <th>Quick Link</th>
-                <th>Contect</th>
-                <th>Follow Us</th>
-            </tr>
-            <tr>
-                <td rowspan="3">Your trusted travel componion</td>
-                <td><a href="#">Tour</a></td>
-                <td rowspan="2">Email:<br>info@travelgrid.com
-                </td>
-                <td><a href="#">Facebook</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">hotel</a></td>
-                <td ><a href="#">Twitter</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">Flights</a></td>
-                <td>Phone <br>(5555)2583 3697</td>
-                <td><a href="#">Instagram</a></td>
-            </tr>
+        </header>
+    </section>
 
-        </table>
-      </footer>
+    <section>
+        <div class="grid">
+            <div class="grid1">
+                <div class="box box1">
+                    <h2>Discover Amazing places</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam beatae vel eveniet totam minus
+                        at!
+                    </p>
+                    <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
+                </div>
+            </div>
+            <div class="grid2">
+                <div class="box box2">Image 1</div>
+                <div class="box box2">Image 2</div>
+                <div class="box box2">Image 3</div>
+                <div class="box box2">Image 4</div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="grida">
+            <div class="ram ram1">
+                <h2>Adventure Toure</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, voluptates!</p>
+                <div class="btn1"><button class="brid-btn">Book Now</button></div>
+            </div>
+            <div class="ram ram1">
+                <h2>Luxury Hotel</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, quaerat.
+                </p>
+                <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
+            </div>
+            <div class="ram ram1">
+                <h2>travel Guides</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
+                <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
+            </div>
+
+        </div>
+    </section>
+    <section>
+        <div class="gridb">
+            <div class="ramg ram11">
+                <div class="asdf">Featured Image</div>
+                <h2>Paris Adventure </h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
+                <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
+
+            </div>
+            <div class="ramg ram22">
+                <div class="asdf">Featured Image</div>
+                <h2>Tokyo Stories</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
+                <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
+            </div>
+            <div class="ramg ram33">
+                <div class="asdf">Featured Image</div>
+                <h2>New York guide</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
+                <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <footer>
+            <table>
+                <tr>
+                    <th>About</th>
+                    <th>Quick Link</th>
+                    <th>Contect</th>
+                    <th>Follow Us</th>
+                </tr>
+                <tr>
+                    <td rowspan="3">Your trusted travel componion</td>
+                    <td><a href="#">Tour</a></td>
+                    <td rowspan="2">Email:<br>info@travelgrid.com
+                    </td>
+                    <td><a href="#">Facebook</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">hotel</a></td>
+                    <td><a href="#">Twitter</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">Flights</a></td>
+                    <td>Phone <br>(5555)2583 3697</td>
+                    <td><a href="#">Instagram</a></td>
+                </tr>
+
+            </table>
+        </footer>
+    </section>
 </body>
 
 </html>
