--- a/project1/project 6/assignament grid.html
+++ b/project1/project 6/assignament grid.html
@@ -12,7 +12,7 @@
     <section>
         <header>
             <div class="nav-bar">
-                <h2>TravelGrid</h2>
+                <h2 class="h2">TravelGrid</h2>
                 <div class="nav-list">
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -34,8 +34,8 @@
         <div class="grid">
             <div class="grid1">
                 <div class="box box1">
-                    <h2>Discover Amazing places</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam beatae vel eveniet totam minus
+                    <h2 class="h2">Discover Amazing places</h2>
+                    <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam beatae vel eveniet totam minus
                         at!
                     </p>
                     <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
@@ -53,19 +53,19 @@
     <section>
         <div class="grida">
             <div class="ram ram1">
-                <h2>Adventure Toure</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, voluptates!</p>
+                <h2 class="h2">Adventure Toure</h2>
+                <p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, voluptates!</p>
                 <div class="btn1"><button class="brid-btn">Book Now</button></div>
             </div>
             <div class="ram ram1">
-                <h2>Luxury Hotel</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, quaerat.
+                <h2 class="h2">Luxury Hotel</h2>
+                <p class="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, quaerat.
                 </p>
                 <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
             </div>
             <div class="ram ram1">
-                <h2>travel Guides</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
+                <h2 class="h2">travel Guides</h2>
+                <p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
                 <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
             </div>
 
@@ -75,21 +75,21 @@
         <div class="gridb">
             <div class="ramg ram11">
                 <div class="asdf">Featured Image</div>
-                <h2>Paris Adventure </h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
+                <h2 class="h2">Paris Adventure </h2>
+                <p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
                 <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
 
             </div>
             <div class="ramg ram22">
                 <div class="asdf">Featured Image</div>
-                <h2>Tokyo Stories</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
+                <h2 class="h2">Tokyo Stories</h2>
+                <p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
                 <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
             </div>
             <div class="ramg ram33">
                 <div class="asdf">Featured Image</div>
-                <h2>New York guide</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
+                <h2 class="h2">New York guide</h2>
+                <p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, omnis.</p>
                 <div class="btn1"> <button class="brid-btn">Learn More</button> </div>
             </div>
         </div>
