--- a/project1/project 6/grid1.html
+++ b/project1/project 6/grid1.html
@@ -2,25 +2,17 @@
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background-color: rgb(206, 201, 201);
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    background-color: rgb(245, 164, 164);
 }
-
-section {
+section{
     width: 855px;
-    margin: 10px;
-    /* border-radius: 10px; */
-}
-
-.h2 {
+    /* border: 1px solid black; */
+    margin:10px;
+    border-radius: 10px;
     background-color: #fff;
-    padding: 5px;
 }
-
-.p1 {
+span {
     background-color: #fff;
-    padding: 5px;
 }
 
 .nav-bar {
@@ -31,22 +23,19 @@ section {
     background-color: #fff;
     border-radius: 15px;
 }
-
-.nav-list a {
+.nav-list a{
     background-color: #fff;
     text-decoration: none;
 }
+/* .grid{
+    background-color: #fff;
+} */
 
 .nav-bar ul {
     display: flex;
     gap: 2em;
     list-style: none;
     background-color: #fff;
-}
-
-.nav-list a {
-    background-color: #fff;
-    text-decoration: none;
 }
 
 input[type="text"],
@@ -68,17 +57,57 @@ textarea {
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
+   /* padding: 30px; */
+    /* gap: 30px; */
     height: 300px;
+    /* border-radius: 15px; */
 }
 
 .grid1 {
     display: grid;
     grid-template-columns: 1fr;
-    height: 100%;
+    height: auto;
+    /* background-color: #fff; */
+}
+
+.box1 {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 15px;
+    /* height: 300px; */
+    background-color: #fff;
+
+}
+.btn1 button {
+    width: 100%;
+    background-color: #0b81f0;
+
+}
+
+.grid2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* gap: 15px; */
     background-color: #fff;
     border-radius: 10px;
 }
 
+.box2 {
+    /* border: 1px solid; */
+    border-radius: 10px;
+    background-color: #0b81f0;
+    /* height: 114px; */
+    width: 200px;
+    margin : 4px;
+}
+.h2{
+    background-color: #fff;
+}
+.p1{
+    background-color: #fff;
+}
 .box1 {
     display: flex;
     flex-direction: column;
@@ -87,56 +116,61 @@ textarea {
 
 }
 
-.btn1 button {
-    width: 100%;
-    background-color: #0b81f0;
-}
-
-.grid2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-    border-radius: 10px;
-    height: 100%;
-    width: 100%;
-}
-
-.box2 {
-    border-radius: 10px;
-    background-color: #0b81f0;
-    width: 100%;
-    height: 100%;
-    margin-left: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.box1 h2 {
+    transform: translatey(+50%);
 }
 
 .grida {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
+    margin: 30px;
+    gap: 30px;
+    background-color: #fff;
 
 }
 
 .ram {
+    border: 1px solid;
     border-radius: 10px;
-    height: 150px;
+    height: auto;
     background-color: #fdfbfb;
-    padding: 5px;
+    padding:5px;
 }
 
 .gridb {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
+    margin: 30px;
+    gap: 30px;
+    background-color: #fff;
 }
 
 .ramg {
+    border: 1px solid;
     border-radius: 10px;
     height: 250px;
     background-color: white;
+    
+}
 
+table {
+    width: 100%;
+    margin-bottom: 30px;
+    background-color: #fff;
+}
+th{
+    background-color: #fff;
+}
+td{
+    background-color: #fff;
+}
+td a{
+    background-color: #fff;
+}
+
+footer {
+    margin: 30px;
+    background-color: #fff;
 }
 
 .asdf {
@@ -148,66 +182,31 @@ textarea {
 
 }
 
-/* .ram1 {
+<!-- .ram1 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-}  */
-
-table {
-    width: 100%;
-    margin-bottom: 30px;
-    background-color: #fff;
-    border-radius: 10px;
-}
-
-th {
-    background-color: #fff;
-}
-
-td {
-    background-color: #fff;
-}
-
-td a {
-    background-color: #fff;
-}
+} -->
 
 @media (max-width: 555px) {
-    section{
-        margin: 5px;
-    }
+   
     header .nav-bar {
-        max-width: 555px;
-        padding: 5px;
         flex-direction: column;
-        align-items: center;
-
-    }
-    .grid{
-        grid-template-columns: 1fr;
-        max-width: 500px;
-    }
-    .grid1, .grida, .grid2, .gridb{
-        grid-template-columns: 1fr;
-        max-width: 500px;
-        margin: 10px;
-    }
-    .box, .ram, .ramg {
-        margin: 10px 0;
-        padding: 10px;
-        text-align: center;
-    }
-    footer table {
-       max-width: 500px;
-        font-size: 14px;
-    }
-    footer table td, footer table th {
-        display:block;
-        text-align: center;
-        margin: 10px 0;
     }
 
-    
+    .grid1 {
+        grid-template-columns: 1fr;
+    }
+
+    .grida {
+        grid-template-columns: 1fr;
+    }
+
+    .grid2 {
+        grid-template-columns: 1fr;
+    }
+
+    .gridb {
+        grid-template-columns: 1fr;
+    }
 }
-
