--- a/project1/project 6/assignament grid.html
+++ b/project1/project 6/assignament grid.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div class="container">
     <section>
         <header>
             <div class="nav-bar">
@@ -123,6 +124,7 @@
             </table>
         </footer>
     </section>
+</div>
 </body>
 
 </html>
