--- a/project1/project 7/netflix .html
+++ b/project1/project 7/netflix .html
@@ -23,11 +23,12 @@
                 <button class="btn"><a href="#">Sing In</a></button>
             </div>
         </div>
-        <div class="bgc-img"><img
-                src="https://assets.nflxext.com/ffe/siteui/vlv3/56b4aa77-4df4-4f23-8a39-52acc5dc0efa/web_tall_panel/IN-en-20250127-TRIFECTA-perspective_e27c562f-09b3-472c-ab1d-88452e1c69ac_medium.jpg">
-<h1 class="img-h1">Unlomuted movies, TV</h1>
-<h1 class="img-h1"> Shows and more</h1>
-<h3 class="img-h3">Start at 149.cancal at any time.</h3>
+        <div class="bgc-img">
+            <div class="box1">
+                <h1 class="img-h1">Unlimited movies,</h1>
+                <h1 class="img-h1">TV Shows and more</h1>
+                <p>Start at 149.cancal at any time.</p></div>
+
         </div>
     </div>
 
