--- a/project1/project 7/netflix .html
+++ b/project1/project 7/netflix .html
@@ -24,10 +24,16 @@
             </div>
         </div>
         <div class="bgc-img">
-            <div class="box1">
+            <div class="box1"><img
+                    src="https://assets.nflxext.com/ffe/siteui/vlv3/56b4aa77-4df4-4f23-8a39-52acc5dc0efa/web_tall_panel/IN-en-20250127-TRIFECTA-perspective_e27c562f-09b3-472c-ab1d-88452e1c69ac_medium.jpg"
+                    alt="">
+                    </div>
+                    <div class="box2">
                 <h1 class="img-h1">Unlimited movies,</h1>
                 <h1 class="img-h1">TV Shows and more</h1>
-                <p>Start at 149.cancal at any time.</p></div>
+                <p>Start at 149.cancal at any time.</p>
+            </div>
+            </div>
 
         </div>
     </div>
@@ -41,6 +47,29 @@
                     pattern="^[a-zA-Z0-9._%+-]+@gmail\.com"></label>
             </label>
             <button class="get-start"> Get Started</button>
+        </div>
+        <div class="grid">
+            <h2 class="trending">Trending Now</h2>
+            <div class="grid1">
+                <ul>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
